<resources>
    <string name="app_name">PhotoAppKotlin</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetton_password">Forgetton Password</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="username">UserName</string>
    <string name="register">Register</string>
    <string name="already_have_a_account">Already have a account?</string>
</resources>
