<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
android:background="@drawable/background">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/editTextUserName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/editTextUserName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail" android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF" android:hint="@string/username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword" android:hint="@string/email"
            android:textColor="#FFFFFF" android:textColorHint="#FFFFFF"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:inputType="textPersonName|textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister" android:textColor="#FFFFFF"
            android:hint="@string/password" android:textColorHint="#FFFFFF"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBtn"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonRegister" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAccount" android:layout_marginBottom="24dp"
            android:background="#FFFFFF"/>
    <TextView
            android:text="@string/already_have_a_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewAccount" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="#FFFFFF" android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>