<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
android:background="@drawable/background">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="-3dp" android:layout_marginStart="0dp">


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" android:id="@+id/imageView"
                android:layout_alignParentEnd="true" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLogin" app:layout_constraintVertical_bias="0.16"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_alignParentStart="true"
                android:id="@+id/editTextLogin"
                android:hint="@string/email" android:textColor="#FFFFFF"
                android:layout_above="@+id/editTextPassword"
                android:layout_below="@+id/imageView"
                android:layout_alignParentEnd="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                android:layout_marginBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textColorHint="#FFFFFF"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:inputType="textPersonName|textPassword"
                android:ems="10"
                android:layout_alignParentStart="true"
                android:id="@+id/editTextPassword"
                android:textColor="#FFFFFF"
                android:layout_alignParentEnd="true" android:layout_above="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogin" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:hint="@string/password" android:textColorHint="#FFFFFF"/>
        <Button
                android:text="@string/login"
                android:textColor="@color/colorBtn"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:id="@+id/buttonLogin"
                android:padding="18dp" android:background="#FFFFFF"
                android:layout_marginEnd="8dp" android:layout_above="@+id/textViewForgetPassword"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewForgetPassword" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/forgetton_password"
                android:layout_width="203dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_height="wrap_content" android:layout_alignParentEnd="true"
                android:id="@+id/textViewForgetPassword"
                android:layout_alignParentStart="true" android:textColor="#FFFFFF"
                android:layout_above="@+id/textViewNewAccount"
                app:layout_constraintBottom_toTopOf="@+id/textViewNewAccount" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/need_a_new_account"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="264dp"
                android:layout_height="wrap_content" android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" android:id="@+id/textViewNewAccount"
                android:layout_alignParentStart="true" android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="96dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>